# powershellknife

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
openspec/changes/add-powershellknife-mvp/: design.md  proposal.md  tasks.md
openspec/changes/add-powershellknife-mvp/specs/history-cleaner/: spec.md
openspec/changes/add-powershellknife-mvp/specs/profile-editor/: spec.md
src/: app.rs  backup.rs  core_cmdlets.json  inventory.rs  lib.rs  main.rs  paths.rs
src/history/: dedup.rs  editplan.rs  mod.rs  parse.rs  typos.rs
src/profile/: block.rs  mod.rs  settings.rs
src/ui/: history.rs  mod.rs  profile.rs
tests/: integration.rs
