[package]
name = "powershellknife"
version = "0.1.0"
edition = "2024"
description = "TUI toolbox to maintain PowerShell history, profile and settings"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
name = "powershellknife"
path = "src/lib.rs"

[[bin]]
name = "psknife"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
